[package]
name = "gdk"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
keywords = ["gdk", "gtk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gdk/"
version = "0.19.0"
description = "Rust bindings for the GDK 3 library"
repository = "https://github.com/gtk-rs/gtk3-rs"
exclude = [
    "gir-files/*",
]
edition = "2021"
rust-version = "1.70"

[lib]
name = "gdk"

[features]
v3_24 = ["ffi/v3_24"]
unsafe-assume-initialized = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
libc = "0.2"
ffi = { package = "gdk-sys", path = "sys" }
cairo-rs = "0.19.0"
gdk-pixbuf = "0.19.0"
gio = "0.19.0"
glib = "0.19.0"
pango = "0.19.0"

[dev-dependencies]
gir-format-check = "^0.1"
