[package]
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gtk/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the GTK+ 3 library"
name = "gtk"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
readme = "README.md"
version = "0.20.0"
keywords = ["gtk", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/fbrouille/gtk3-rs"
build = "build.rs"
exclude = ["gir-files/*"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "gtk"

[features]
v3_24 = ["ffi/v3_24"]
v3_24_1 = ["v3_24", "ffi/v3_24_1"]
v3_24_8 = ["v3_24_1", "ffi/v3_24_8"]
v3_24_9 = ["v3_24_8", "ffi/v3_24_9"]
v3_24_11 = ["v3_24_9", "ffi/v3_24_11"]
v3_24_30 = ["v3_24_11", "ffi/v3_24_30"]
gio_v2_58 = ["gio/v2_58"]
unsafe-assume-initialized = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"
field-offset = "0.3"
futures-channel = "0.3"
once_cell = "1.0"
atk = { path = "../atk" }
ffi = { package = "gtk-sys", path = "sys" }
gtk3-macros = { path = "../gtk3-macros" }
cairo-rs = "0.20"
gio = "0.20"
glib = "0.20"
gdk = { path = "../gdk" }
gdk-pixbuf = "0.20"
pango = "0.20"

[dev-dependencies]
gir-format-check = "^0.1"
